// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFieldPassword is rendered 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        aria-label="aria-label"
        class="ouiFieldPassword testClass1 testClass2"
        data-test-subj="test subject string"
        id="1"
        name="elastic"
        placeholder="Placeholder"
        spellcheck="false"
        type="password"
        value="1"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiFieldPassword props compressed is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--compressed"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        class="ouiFieldPassword ouiFieldPassword--compressed"
        spellcheck="false"
        type="password"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiFieldPassword props dual dual type also renders append 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        class="ouiFieldPassword ouiFieldPassword--inGroup ouiFieldPassword--withToggle"
        spellcheck="false"
        type="password"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <label
    class="ouiFormLabel ouiFormControlLayout__append"
  >
    String
  </label>
  <span
    class="ouiFormControlLayout__append"
  >
    Span
  </span>
  <button
    aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFormControlLayout__append"
    title="Show password as plain text. Note: this will visually expose your password on the screen."
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="eye"
    />
  </button>
</div>
`;

exports[`OuiFieldPassword props dual dualToggleProps is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        class="ouiFieldPassword ouiFieldPassword--inGroup ouiFieldPassword--withToggle"
        spellcheck="false"
        type="password"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <button
    aria-label="aria-label"
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFormControlLayout__append testClass1 testClass2"
    data-test-subj="test subject string"
    title="Show password as plain text. Note: this will visually expose your password on the screen."
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="eye"
    />
  </button>
</div>
`;

exports[`OuiFieldPassword props fullWidth is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        class="ouiFieldPassword ouiFieldPassword--fullWidth"
        spellcheck="false"
        type="password"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiFieldPassword props isInvalid is rendered 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control
      isinvalid="true"
    >
      <input
        class="ouiFieldPassword"
        spellcheck="false"
        type="password"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiFieldPassword props isLoading is rendered 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        class="ouiFieldPassword ouiFieldPassword-isLoading"
        spellcheck="false"
        type="password"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
    <div
      class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
    >
      <span
        class="ouiLoadingSpinner ouiLoadingSpinner--medium"
      />
    </div>
  </div>
</div>
`;

exports[`OuiFieldPassword props prepend and append is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <label
    class="ouiFormLabel ouiFormControlLayout__prepend"
  >
    String
  </label>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        class="ouiFieldPassword ouiFieldPassword--inGroup"
        spellcheck="false"
        type="password"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <label
    class="ouiFormLabel ouiFormControlLayout__append"
  >
    String
  </label>
</div>
`;

exports[`OuiFieldPassword props type dual is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        class="ouiFieldPassword ouiFieldPassword--inGroup ouiFieldPassword--withToggle"
        spellcheck="false"
        type="password"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <button
    aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiFormControlLayout__append"
    title="Show password as plain text. Note: this will visually expose your password on the screen."
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="eye"
    />
  </button>
</div>
`;

exports[`OuiFieldPassword props type password is rendered 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        class="ouiFieldPassword"
        spellcheck="false"
        type="password"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiFieldPassword props type text is rendered 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <oui-validatable-control>
      <input
        class="ouiFieldPassword"
        spellcheck="false"
        type="text"
      />
    </oui-validatable-control>
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;
